[gd_scene load_steps=5 format=3 uid="uid://dhoronxqmj2jb"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_ujdme"]
[ext_resource type="Texture2D" uid="uid://cpvu1rsfkjm85" path="res://img/blc_empty.svg" id="2_bxg0o"]
[ext_resource type="AudioStream" uid="uid://bi4oki6c5jmyn" path="res://sfx/snap.mp3" id="3_dgw14"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rc4dd"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_ujdme")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.843137, 0.843137, 0.843137, 0.713726)
offset_left = -40.0
offset_top = -40.0
offset_right = 1240.0
offset_bottom = 1040.0
texture = SubResource("CanvasTexture_rc4dd")

[node name="Button" type="Button" parent="."]
offset_left = 520.0
offset_top = 480.0
offset_right = 680.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 25
text = "Play Again"

[node name="Victory" type="Label" parent="."]
offset_left = 480.0
offset_top = 200.0
offset_right = 720.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Success!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fail" type="Label" parent="."]
visible = false
offset_left = 480.0
offset_top = 240.0
offset_right = 720.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Fail"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Code" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 442.0
offset_top = 360.0
offset_right = 762.0
offset_bottom = 440.0

[node name="Block1" type="Sprite2D" parent="Code"]
position = Vector2(40, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bxg0o")

[node name="Block2" type="Sprite2D" parent="Code"]
position = Vector2(120, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bxg0o")

[node name="Block3" type="Sprite2D" parent="Code"]
position = Vector2(200, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bxg0o")

[node name="Block4" type="Sprite2D" parent="Code"]
position = Vector2(280, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bxg0o")

[node name="Snap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dgw14")

[connection signal="pressed" from="Button" to="." method="_on_play_again"]
